--- a/detailpagina.html
+++ b/detailpagina.html
@@ -9,6 +9,7 @@
 	<title>Sonny Angel Benelux - Smiski</title>
 	
 	<link href="styles/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles/detail.css">
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
 </head>
 
