--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
 	<title>Sonny Angel Benelux</title>
 
 	<link href="styles/style.css" rel="stylesheet">
+	<link rel="stylesheet" href="styles/index.css">
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
 </head>
 
 <body>
 	<header>
 		<nav>
+			<!-- hamburger menu van codepen opdracht gehaald -->
+			<button aria-hidden="true"><img src="https://assets.codepen.io/274456/ui-icon-hamburger.svg" alt="Hamburger menu"/></button>
+			<!-- <img src="/images/logo.png" alt="Sonny Angel Benelux logo"> -->
 			<ul>
 				<li><a href="#">home</a></li>
 				<li><a href="#">alle producten</a></li>
@@ -24,22 +28,29 @@
 				<li><a href="#">contact</a></li>
 			</ul>
 		</nav>
+
+		<nav>
+			<ul>
+				<li><button>taal button</button></li>
+				<li><a href="#"></a>winkelwagen</li>
+			</ul>
+		</nav>
 	</header>
 
 	<main>
 		<section>
-			<h1>Sonny Angel</h1>
-			<p>he may bring you happiness</p>
+			<h1><img src="/images/title_logo.png" alt="Sonny Angels: he may bring you happiness"></h1>
 			<p>Sonny Angel Benelux is de officiële webwinkel voor Sonny Angel in de Benelux, Duitsland en Oostenrijk.
 				Ontdek hier onze ruime collectie Sonny Angel en Smiski!</p>
 			<a href="#">Shop nu!</a>
+			<a href="#">button naar content</a>
 		</section>
 
 		<section>
 			<h2>Producten</h2>
-			<a href="#"><img src="#" alt="Monchhichi Hippers"></a>
-			<a href="#"><img src="#" alt="Smiski Strap Accessories"></a>
-			<a href="#"><img src="#" alt="Sonny Angle Snack Series"></a>
+			<a href="#"><img src="/images/smiski_birthday.jpg" alt="Smiski Birthday Serie"></a>
+			<a href="#"><img src="/images/pumpkinpatch.jpg" alt="Sonny Angel Pumpkin Patch Series"></a>
+			<a href="#"><img src="/images/snackserie.jpg" alt="Sonny Angel Snack Series"></a>
 		</section>
 
 		<section>
