--- a/detailpagina.html
+++ b/detailpagina.html
@@ -8,8 +8,8 @@
 	
 	<title>Sonny Angel Benelux - Smiski</title>
 	
-	<link href="styles/style.css" rel="stylesheet">
     <link rel="stylesheet" href="styles/detail.css">
+	<link href="styles/style.css" rel="stylesheet">
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
 </head>
 
@@ -23,6 +23,13 @@
 				<li><a href="#">nieuw!</a></li>
 				<li><a href="#">over</a></li>
 				<li><a href="#">contact</a></li>
+			</ul>
+		</nav>
+
+        <nav>
+			<ul>
+				<li><button>taal button</button></li>
+				<li><a href="#"></a>winkelwagen</li>
 			</ul>
 		</nav>
 	</header>
