--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 
 	<title>Sonny Angel Benelux</title>
 
-	<link href="styles/style.css" rel="stylesheet">
 	<link rel="stylesheet" href="styles/index.css">
+	<link href="styles/style.css" rel="stylesheet">
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
 </head>
 
 <body>
 	<header>
 		<nav>
-			<!-- hamburger menu van codepen opdracht gehaald -->
+			<!-- hamburger menu van codepen opdracht -->
 			<button aria-hidden="true"><img src="https://assets.codepen.io/274456/ui-icon-hamburger.svg" alt="Hamburger menu"/></button>
 			<!-- <img src="/images/logo.png" alt="Sonny Angel Benelux logo"> -->
 			<ul>
@@ -38,6 +38,7 @@
 	</header>
 
 	<main>
+		<!-- section 1: landing -->
 		<section>
 			<h1><img src="/images/title_logo.png" alt="Sonny Angels: he may bring you happiness"></h1>
 			<p>Sonny Angel Benelux is de officiële webwinkel voor Sonny Angel in de Benelux, Duitsland en Oostenrijk.
@@ -46,6 +47,7 @@
 			<a href="#">button naar content</a>
 		</section>
 
+		<!-- section 2: nieuwe producten -->
 		<section>
 			<h2>Producten</h2>
 			<a href="#"><img src="/images/smiski_birthday.jpg" alt="Smiski Birthday Serie"></a>
@@ -53,6 +55,7 @@
 			<a href="#"><img src="/images/snackserie.jpg" alt="Sonny Angel Snack Series"></a>
 		</section>
 
+		<!-- section 3: alle series -->
 		<section>
 			<a href="#">
 				<h2>Ontdek hier alle series</h2>
@@ -60,24 +63,58 @@
 			<ul>
 				<li><a href="#">Sonny angel original series</a></li>
 				<li><a href="#">Sonny angel limited editions</a></li>
+				<li><a href="#">Sonny angel limited hippers</a></li>
 				<li><a href="#">Smiski</a></li>
 				<li><a href="#">Toon alles</a></li>
 			</ul>
+			
+			<!-- carousel -->
+			<ul>
+				<li>
+					<a href="#">
+						<h3>Smiski</h3>
+						<img src="images/smiski1_carousel.jpg" alt="Smiski">
+						<p>Figuurtje Smiski serie 1</p>
+					</a>
+					<p>€12,90</p>
+				</li>
 
-			<a href="#">
-				<h3>Smiski</h3>
-				<img src="#" alt="Smiski">
-				<p>Figuurtje Smiski serie 1</p>
-			</a>
-			<p>€12,90</p>
+				<li>
+					<a href="#">
+						<h3>Smiski</h3>
+						<img src="images/animalbakery_carousel.jpg" alt="Smiski">
+						<p>Figuurtje Smiski serie 1</p>
+					</a>
+					<p>€12,90</p>
+				</li>
+
+				<li>
+					<a href="#">
+						<h3>Smiski</h3>
+						<img src="images/smiskisunday_carousel.jpg" alt="Smiski">
+						<p>Figuurtje Smiski serie 1</p>
+					</a>
+					<p>€12,90</p>
+				</li>
+
+				<li>
+					<a href="#">
+						<h3>Smiski</h3>
+						<img src="images/rainyday_carousel.jpg" alt="Smiski">
+						<p>Figuurtje Smiski serie 1</p>
+					</a>
+					<p>€12,90</p>
+				</li>
+			</ul>
 		</section>
 
+		<!-- section 4: store finder -->
 		<section>
 			<h2>Partner store finder</h2>
 			<a href="#">Vind een sonny angel dealer bij jou in de buurt</a>
-			<img src="#" alt="#">
 		</section>
 
+		<!-- section 5: contactformulier -->
 		<section>
 			<h2>Blijf op de hoogte als er nieuwe Sonny Angel series worden gelanceerd!
 				Meld je nu aan om onze nieuwsbrief te ontvangen</h2>
