--- a/detailpagina.html
+++ b/detailpagina.html
@@ -2,144 +2,246 @@
 <html lang="nl">
 
 <head>
-    <meta charset="UTF-8">
-	<meta name="author" content="Zhafira Nasseer">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
+	<meta charset="UTF-8" />
+	<meta name="author" content="Zhafira Nasseer" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+
 	<title>Sonny Angel Benelux - Smiski</title>
-	
-    <link rel="stylesheet" href="styles/detail.css">
-	<link href="styles/style.css" rel="stylesheet">
-	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
+
+	<link rel="stylesheet" href="styles/detail.css" />
+	<link href="styles/style.css" rel="stylesheet" />
+	<link rel="icon" type="image/svg+xml" href="images/sonnyicon.ico" />
 </head>
 
 <body>
-    <header>
+	<header>
+		<img src="/images/logo.png" alt="Sonny Angel Benelux logo" />
+
+		<!-- hamburger menu van codepen opdracht -->
+		<button>
+			<svg width="30px" height="30px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<path fill-rule="evenodd" clip-rule="evenodd" d="M19.5 8.25H4.5V6.75H19.5V8.25Z" fill="#080341" />
+				<path fill-rule="evenodd" clip-rule="evenodd" d="M19.5 12.75H4.5V11.25H19.5V12.75Z" fill="#080341" />
+				<path fill-rule="evenodd" clip-rule="evenodd" d="M19.5 17.25H4.5V15.75H19.5V17.25Z" fill="#080341" />
+			</svg>
+		</button>
+
 		<nav>
+			<button aria-hidden="true">sonny angel benelux</button>
 			<ul>
-				<li><a href="#">home</a></li>
-				<li><a href="#">alle producten</a></li>
-				<li><a href="#">limited editions</a></li>
-				<li><a href="#">nieuw!</a></li>
-				<li><a href="#">over</a></li>
-				<li><a href="#">contact</a></li>
+				<li><a href="#">Home</a></li>
+				<li><a href="#">Alle Producten</a></li>
+				<li><a href="#">Limited Editions</a></li>
+				<li><a href="#">Nieuw!</a></li>
+				<li><a href="#">Over</a></li>
+				<li><a href="#">Contact</a></li>
 			</ul>
 		</nav>
 
-        <nav>
+		<!-- second nav: shopping cart en language -->
+		<nav>
 			<ul>
-				<li><button>taal button</button></li>
-				<li><a href="#"></a>winkelwagen</li>
+				<li>
+					<button>
+						<?xml version="1.0" encoding="utf-8"?><!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
+						<svg width="25px" height="25px" viewBox="0 0 24 24" role="img"
+							xmlns="http://www.w3.org/2000/svg" aria-labelledby="languageIconTitle" stroke="#000000"
+							stroke-width="1" stroke-linecap="square" stroke-linejoin="miter" fill="none"
+							color="#000000">
+							<title id="languageIconTitle">Language</title>
+							<circle cx="12" cy="12" r="10" />
+							<path stroke-linecap="round"
+								d="M12,22 C14.6666667,19.5757576 16,16.2424242 16,12 C16,7.75757576 14.6666667,4.42424242 12,2 C9.33333333,4.42424242 8,7.75757576 8,12 C8,16.2424242 9.33333333,19.5757576 12,22 Z" />
+							<path stroke-linecap="round" d="M2.5 9L21.5 9M2.5 15L21.5 15" />
+						</svg>
+					</button>
+				</li>
+				<li>
+					<a href="#">
+						<svg width="25px" height="25px" viewBox="0 0 32 32" version="1.1"
+							xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+							<g id="icomoon-ignore"></g>
+							<path
+								d="M30.622 9.602h-22.407l-1.809-7.464h-5.027v1.066h4.188l5.198 21.443c-1.108 0.323-1.923 1.334-1.923 2.547 0 1.472 1.193 2.666 2.666 2.666s2.666-1.194 2.666-2.666c0-0.603-0.208-1.153-0.545-1.599h7.487c-0.337 0.446-0.545 0.997-0.545 1.599 0 1.472 1.193 2.666 2.665 2.666s2.666-1.194 2.666-2.666c0-1.473-1.193-2.665-2.666-2.666v0h-11.403l-0.517-2.133h14.968l4.337-12.795zM13.107 27.196c0 0.882-0.717 1.599-1.599 1.599s-1.599-0.717-1.599-1.599c0-0.882 0.717-1.599 1.599-1.599s1.599 0.718 1.599 1.599zM24.836 27.196c0 0.882-0.718 1.599-1.6 1.599s-1.599-0.717-1.599-1.599c0-0.882 0.717-1.599 1.599-1.599 0.882 0 1.6 0.718 1.6 1.599zM11.058 21.331l-2.585-10.662h20.662l-3.615 10.662h-14.462z"
+								fill="#000000"></path>
+						</svg>
+					</a>
+				</li>
 			</ul>
 		</nav>
 	</header>
 
-    <main>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Alle Producten</a></li>
-                <li><a href="#">Smiski</a></li>
-                <li><a href="#">Smiski Strap serie 1</a></li>
-            </ul>
-        </nav>
+	<main>
+		<!-- breadcrumbs -->
+		<nav>
+			<ul>
+				<li><a href="/index.html">Home</a></li>
+				<li><a href="">Alle Producten</a></li>
+				<li><a href="">Smiski</a></li>
+				<li><a href="">Smiski Strap serie 1</a></li>
+			</ul>
+		</nav>
 
-        <section>
-            <h1>Smiski Strap serie 1</h1>
-            <p>€ 6,50 (inclusief BTW)</p>
-            <p>De Smiski Strap Accessoires Serie 1: vier 10 jaar Smiski met onze betoverende nieuwe accessoires!</p>
+		<!-- section 1: product viewer -->
+		<section>
+			<h1>Smiski Strap serie 1</h1>
+			<p>€ 6,50 (inclusief BTW)</p>
 
-            <p>Voeg een vleugje charme toe aan je dagelijkse leven met de Smiski Strap Accessoires Serie 1. Deze schattige minifiguren zijn verpakt in unieke Smiski capusles, klaar om een glimlach op je gezicht te toveren.</p>
+			<p>
+				De Smiski Strap Accessoires Serie 1: vier 10 jaar Smiski met onze
+				betoverende nieuwe accessoires!
+			</p>
 
-            <p>Waarom je ze geweldig zult vinden:</p>
-            <p>Glow in the Dark-plezier: Zowel het Smiski-figuurtje als de bijbehorende capsule zijn gemaakt van speciaal fosforescerend materiaal, dat overdag licht absorbeert en zachtjes oplicht in het donker.</p>
-            <p>Collectibles: Ontdek 6 standaardfiguurtjes en 1 mysterieus secret figuurtje, allemaal geïnspireerd op de originele Smiski Serie 1.</p>
-            <p>Draagbaar: Bevestig ze aan je telefoon, tas, rugzak of sleutels</p>
-            <p>Unieke persoonlijkheden: Met favorieten van fans zoals Smiski Peeking, Smiski Hugging Knees en Smiski Lounging, heeft elk figuurtje zijn eigen kenmerkende pose en karakter.</p>
+			<p>
+				Voeg een vleugje charme toe aan je dagelijkse leven met de Smiski
+				Strap Accessoires Serie 1. Deze schattige minifiguren zijn verpakt in
+				unieke Smiski capusles, klaar om een glimlach op je gezicht te
+				toveren.
+			</p>
 
-            <p>Koop vandaag nog jouw Smiski Strap Serie 1!</p>
+			<p>Waarom je ze geweldig zult vinden:</p>
+			<p>
+				Glow in the Dark-plezier: Zowel het Smiski-figuurtje als de
+				bijbehorende capsule zijn gemaakt van speciaal fosforescerend
+				materiaal, dat overdag licht absorbeert en zachtjes oplicht in het
+				donker.
+			</p>
+			<p>
+				Collectibles: Ontdek 6 standaardfiguurtjes en 1 mysterieus secret
+				figuurtje, allemaal geïnspireerd op de originele Smiski Serie 1.
+			</p>
+			<p>Draagbaar: Bevestig ze aan je telefoon, tas, rugzak of sleutels</p>
+			<p>
+				Unieke persoonlijkheden: Met favorieten van fans zoals Smiski Peeking,
+				Smiski Hugging Knees en Smiski Lounging, heeft elk figuurtje zijn
+				eigen kenmerkende pose en karakter.
+			</p>
 
-            <img src="#" alt="Smiski Strap serie 1">
-            <ul>
-                <li><a href="#"><img src="#" alt="#"></a></li>
-                <li><a href="#"><img src="#" alt="#"></a></li>
-                <li><a href="#"><img src="#" alt="#"></a></li>
-                <li><a href="#"><img src="#" alt="#"></a></li>
-            </ul>
+			<p>Koop vandaag nog jouw Smiski Strap Serie 1!</p>
 
-            <form>
-                <label>
-                    Aantal
-                    <input type="number">
-                </label>
-            </form>
-        </section>
+			<img src="images/smiski-strap-serie.jpg" alt="Smiski Strap serie 1" />
+			<ul>
+				<li>
+					<a href="">
+						<img src="images/smiski-productviewer-3.jpg" alt="Smiski Strap Serie 1 Accessoires" /></a>
+				</li>
+				<li>
+					<a href=""><img src="images/smiski-productviewer-2.jpg" alt="#" /></a>
+				</li>
+				<li>
+					<a href=""><img src="images/smiski-productviewer-1.jpg" alt="#" /></a>
+				</li>
+				<!-- <li><a href="#"><img src="#" alt="#"></a></li> -->
+			</ul>
 
-        <section>
-            <h2>Productdetails</h2>
+			<form>
+				<label>
+					Aantal
+					<input type="number"/>
+				</label>
 
-            <h3>Merk</h3>
-            <a href="#">Smiski</a>
+				<label>
+					In winkelwagen
+					<input type="submit" value="In winkelwagen"/>
+				</label>
+			</form>
+		</section>
 
-            <h3>Referentie</h3>
-            <p>SASM66441</p>
+		<!-- section 2 -->
+		<section>
+			<h2>Productdetails</h2>
 
-            <dl>
-                <dt>Material</dt>
-                <dd>PVC, Acryl, Nylon, Zinc Alloy, Iron, Stainless Steel</dd>
+			<div>
+				<dl>
+					<dt>Merk</dt>
+					<dd>Smiski</dd>
 
-                <dt>Leeftijdsgroep</dt>
-                <dd>+ 3 jaar</dd>
+					<dt>Referentie</dt>
+					<dd>SASM66441</dd>
 
-                <dt>Afmetingen (mm)</dt>
-                <dd>38-16x43-20x12-22</dd>
-            </dl>
-        </section>
+					<dt>Material</dt>
+					<dd>PVC, Acryl, Nylon, Zinc Alloy, Iron, Stainless Steel</dd>
+	
+					<dt>Leeftijdsgroep</dt>
+					<dd>+ 3 jaar</dd>
+	
+					<dt>Afmetingen (mm)</dt>
+					<dd>38-16x43-20x12-22</dd>
+				</dl>	
+			</div>
+		</section>
 
-        <section>
-            <h2>16 andere producten in dezelfde categorie:</h2>
-            <a href="#">
-                <h3>Smiski</h3>
-                <p>Figurtje Smiski serie 1</p>
-                <img src="#" alt="#">
-            </a>
-            <p>€12,90</p>
-        </section>
-    </main>
+		<!-- section 3 -->
+		<section>
+			<h2>16 andere producten in dezelfde categorie:</h2>
 
-    <footer>
+			<ul>
+				<li>
+					<a href="#">
+						<h3>Smiski</h3>
+						<img src="#" alt="#">
+					</a>
+					<p>Smiski Touch Light</p>
+					<p>€39,95</p>
+				</li>
+
+				<li>
+					<a href="#">
+						<h3>Smiski</h3>
+						<img src="#" alt="#">
+					</a>
+					<p>Smiski Touch Light</p>
+					<p>€39,95</p>
+				</li>
+
+				<li>
+					<a href="#">
+						<h3>Smiski</h3>
+						<img src="#" alt="#">
+					</a>
+					<p>Smiski Touch Light</p>
+					<p>€39,95</p>
+				</li>
+			</ul>
+		</section>
+	</main>
+
+	<footer>
 		<h2>Sonny Angel</h2>
-		<p>Sonny Angel Benelux is de officiële webwinkel voor Sonny Angel in de Benelux, Duitsland en Oostenrijk. Ontdek
-			hier onze ruime collectie Sonny Angel, Smiski, Gee en Fancy Pets!</p>
+		<p>
+			Sonny Angel Benelux is de officiële webwinkel voor Sonny Angel in de
+			Benelux, Duitsland en Oostenrijk. Ontdek hier onze ruime collectie Sonny
+			Angel, Smiski, Gee en Fancy Pets!
+		</p>
 
 		<nav>
 			<h3>Over ons</h3>
 			<ul>
-				<li><a href="#">Over Sonny Angel</a></li>
-				<li><a href="#">Smiski</a></li>
-				<li><a href="#">Over Hippers</a></li>
-				<li><a href="#">Store Finder</a></li>
-				<li><a href="#">Algemene Voorwaarden</a></li>
-				<li><a href="#">Privacy</a></li>
+				<li><a href="">Over Sonny Angel</a></li>
+				<li><a href="">Smiski</a></li>
+				<li><a href="">Over Hippers</a></li>
+				<li><a href="">Store Finder</a></li>
+				<li><a href="">Algemene Voorwaarden</a></li>
+				<li><a href="">Privacy</a></li>
 			</ul>
 		</nav>
 
 		<nav>
 			<h3>Klantenservice</h3>
 			<ul>
-				<li><a href="#">FAQ's</a></li>
-				<li><a href="#">Mijn Account</a></li>
-				<li><a href="#">Contacteer Ons</a></li>
-				<li><a href="#">Betaling</a></li>
-				<li><a href="#">Levering</a></li>
-				<li><a href="#">Bestelstatus</a></li>
+				<li><a href="">FAQ's</a></li>
+				<li><a href="">Mijn Account</a></li>
+				<li><a href="">Contacteer Ons</a></li>
+				<li><a href="">Betaling</a></li>
+				<li><a href="">Levering</a></li>
+				<li><a href="">Bestelstatus</a></li>
 			</ul>
 		</nav>
 
 		<p>Copyright © Sonny Angel Benelux 2024</p>
 	</footer>
 
-    <script defer src="scripts/script.js"></script>
+	<script defer src="scripts/script.js"></script>
 </body>
 
 </html>
