--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 	<header>
-		<img src="/images/logo.png" alt="Sonny Angel Benelux logo">
+		<img src="images/logo.png" alt="Sonny Angel Benelux logo">
 
 		<!-- hamburger menu van codepen opdracht -->
 		<button>
@@ -29,12 +29,12 @@
 		<nav>
 			<button aria-hidden="true">sonny angel benelux</button>
 			<ul>
-				<li><a href="#">Home</a></li>
-				<li><a href="#">Alle Producten</a></li>
-				<li><a href="#">Limited Editions</a></li>
-				<li><a href="#">Nieuw!</a></li>
-				<li><a href="#">Over</a></li>
-				<li><a href="#">Contact</a></li>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="">Alle Producten</a></li>
+				<li><a href="">Limited Editions</a></li>
+				<li><a href="">Nieuw!</a></li>
+				<li><a href="">Over</a></li>
+				<li><a href="">Contact</a></li>
 			</ul>
 		</nav>
 
@@ -44,7 +44,7 @@
 				<li><button><?xml version="1.0" encoding="utf-8"?><!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
 					<svg width="25px" height="25px" viewBox="0 0 24 24" role="img" xmlns="http://www.w3.org/2000/svg" aria-labelledby="languageIconTitle" stroke="#000000" stroke-width="1" stroke-linecap="square" stroke-linejoin="miter" fill="none" color="#000000"> <title id="languageIconTitle">Language</title> <circle cx="12" cy="12" r="10"/> <path stroke-linecap="round" d="M12,22 C14.6666667,19.5757576 16,16.2424242 16,12 C16,7.75757576 14.6666667,4.42424242 12,2 C9.33333333,4.42424242 8,7.75757576 8,12 C8,16.2424242 9.33333333,19.5757576 12,22 Z"/> <path stroke-linecap="round" d="M2.5 9L21.5 9M2.5 15L21.5 15"/> </svg></button></li>
 				<li>
-					<a href="#">
+					<a href="">
 						<svg width="25px" height="25px" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 							<g id="icomoon-ignore"></g>
 							<path d="M30.622 9.602h-22.407l-1.809-7.464h-5.027v1.066h4.188l5.198 21.443c-1.108 0.323-1.923 1.334-1.923 2.547 0 1.472 1.193 2.666 2.666 2.666s2.666-1.194 2.666-2.666c0-0.603-0.208-1.153-0.545-1.599h7.487c-0.337 0.446-0.545 0.997-0.545 1.599 0 1.472 1.193 2.666 2.665 2.666s2.666-1.194 2.666-2.666c0-1.473-1.193-2.665-2.666-2.666v0h-11.403l-0.517-2.133h14.968l4.337-12.795zM13.107 27.196c0 0.882-0.717 1.599-1.599 1.599s-1.599-0.717-1.599-1.599c0-0.882 0.717-1.599 1.599-1.599s1.599 0.718 1.599 1.599zM24.836 27.196c0 0.882-0.718 1.599-1.6 1.599s-1.599-0.717-1.599-1.599c0-0.882 0.717-1.599 1.599-1.599 0.882 0 1.6 0.718 1.6 1.599zM11.058 21.331l-2.585-10.662h20.662l-3.615 10.662h-14.462z" fill="#000000">
@@ -59,11 +59,11 @@
 	<main>
 		<!-- section 1: landing -->
 		<section>
-			<h1><img src="/images/title_logo.png" alt="Sonny Angels: he may bring you happiness"></h1>
+			<h1><img src="images/title_logo.png" alt="Sonny Angels: he may bring you happiness"></h1>
 			<p>Sonny Angel Benelux is de officiële webwinkel voor Sonny Angel in de Benelux, Duitsland en Oostenrijk.
 				Ontdek hier onze ruime collectie Sonny Angel en Smiski!</p>
 
-			<a href="#">shop nu</a>
+			<a href="">shop nu!</a>
 
 			<a href="#series"><?xml version="1.0" encoding="utf-8"?><!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
 				<svg width="40px" height="40px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -75,22 +75,21 @@
 		<!-- section 2: nieuwe producten -->
 		<section>
 			<h2 class="visually-hidden">Nieuwe Producten</h2>
-			<a href="#"><img src="/images/smiski_birthday.jpg" alt="Smiski Birthday Serie"></a>
-			<a href="#"><img src="/images/pumpkinpatch.jpg" alt="Sonny Angel Pumpkin Patch Series"></a>
-			<a href="#"><img src="/images/snackserie.jpg" alt="Sonny Angel Snack Series"></a>
+			<img src="images/smiski_birthday.jpg" alt="Smiski Birthday Serie">
+			<img src="images/pumpkinpatch.jpg" alt="Sonny Angel Pumpkin Patch Series">
+			<img src="images/snackserie.jpg" alt="Sonny Angel Snack Series">
 		</section>
 
 		<!-- section 3: alle series -->
 		<section id="series">
-			<a href="#">
-				<h2>Ontdek hier alle series</h2>
-			</a>
+			<h2>Ontdek hier alle series</h2>
+			
 			<ul>
-				<li><a href="#">Sonny angel original series</a></li>
-				<li><a href="#">Sonny angel limited editions</a></li>
-				<li><a href="#">Sonny angel limited hippers</a></li>
-				<li><a href="#">Smiski</a></li>
-				<li><a href="#">Toon alles</a></li>
+				<li><a href="">Sonny angel original series</a></li>
+				<li><a href="">Sonny angel limited editions</a></li>
+				<li><a href="">Sonny angel limited hippers</a></li>
+				<li><a href="">Smiski</a></li>
+				<li><a href="">Toon alles</a></li>
 			</ul>
 			
 			<!-- carousel -->
@@ -122,13 +121,34 @@
 					<p>Figuurtje Smiski serie 1</p>
 					<p>€12,90</p>
 				</li>
+
+				<li>
+					<h3>Smiski</h3>
+					<img src="images/rainyday_carousel.jpg" alt="Smiski">
+					<p>Figuurtje Smiski serie 1</p>
+					<p>€12,90</p>
+				</li>
+
+				<li>
+					<h3>Smiski</h3>
+					<img src="images/rainyday_carousel.jpg" alt="Smiski">
+					<p>Figuurtje Smiski serie 1</p>
+					<p>€12,90</p>
+				</li>
+
+				<li>
+					<h3>Smiski</h3>
+					<img src="images/rainyday_carousel.jpg" alt="Smiski">
+					<p>Figuurtje Smiski serie 1</p>
+					<p>€12,90</p>
+				</li>
 			</ul>
 		</section>
 
 		<!-- section 4: store finder -->
 		<section>
 			<h2>Partner store finder</h2>
-			<a href="#">Vind een sonny angel dealer bij jou in de buurt</a>
+			<a href="">Vind een sonny angel dealer bij jou in de buurt</a>
 		</section>
 
 		<!-- section 5: contactformulier -->
@@ -163,24 +183,24 @@
 		<nav>
 			<h3>Over ons</h3>
 			<ul>
-				<li><a href="#">Over Sonny Angel</a></li>
-				<li><a href="#">Smiski</a></li>
-				<li><a href="#">Over Hippers</a></li>
-				<li><a href="#">Store Finder</a></li>
-				<li><a href="#">Algemene Voorwaarden</a></li>
-				<li><a href="#">Privacy</a></li>
+				<li><a href="">Over Sonny Angel</a></li>
+				<li><a href="">Smiski</a></li>
+				<li><a href="">Over Hippers</a></li>
+				<li><a href="">Store Finder</a></li>
+				<li><a href="">Algemene Voorwaarden</a></li>
+				<li><a href="">Privacy</a></li>
 			</ul>
 		</nav>
 
 		<nav>
 			<h3>Klantenservice</h3>
 			<ul>
-				<li><a href="#">FAQ's</a></li>
-				<li><a href="#">Mijn Account</a></li>
-				<li><a href="#">Contacteer Ons</a></li>
-				<li><a href="#">Betaling</a></li>
-				<li><a href="#">Levering</a></li>
-				<li><a href="#">Bestelstatus</a></li>
+				<li><a href="">FAQ's</a></li>
+				<li><a href="">Mijn Account</a></li>
+				<li><a href="">Contacteer Ons</a></li>
+				<li><a href="">Betaling</a></li>
+				<li><a href="">Levering</a></li>
+				<li><a href="">Bestelstatus</a></li>
 			</ul>
 		</nav>
 
