--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 	<header>
-		<img src="../images/logo.png" alt="Sonny Angel Benelux logo">
+		<img src="images/logo.png" alt="Sonny Angel Benelux logo">
 
 		<!-- hamburger menu van codepen opdracht -->
 		<button>
