--- a/index.html
+++ b/index.html
@@ -176,9 +176,11 @@
 	</main>
 
 	<footer>
-		<h2><img src="images/footer_logo.png" alt="Sonny Angels"></h2>
-		<p>Sonny Angel Benelux is de officiële webwinkel voor Sonny Angel in de Benelux, Duitsland en Oostenrijk. Ontdek
-			hier onze ruime collectie Sonny Angel, Smiski, Gee en Fancy Pets!</p>
+		<section>
+			<h2><img src="images/footer_logo.png" alt="Sonny Angels"></h2>
+			<p>Sonny Angel Benelux is de officiële webwinkel voor Sonny Angel in de Benelux, Duitsland en Oostenrijk. Ontdek
+				hier onze ruime collectie Sonny Angel, Smiski, Gee en Fancy Pets!</p>
+		</section>
 
 		<nav>
 			<h3>Over ons</h3>
@@ -204,7 +206,7 @@
 			</ul>
 		</nav>
 
-		<nav>
+		<section>
 			<a href="">
 				<svg width="30px" height="30px" viewBox="-5 0 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     
@@ -239,7 +241,7 @@
 
 			<p>Copyright © Sonny Angel Benelux 2024</p>
 			<img src="images/footer_payments.png" alt="">
-		</nav>
+		</section>
 	</footer>
 
 	<script defer src="scripts/script.js"></script>
