--- a/detailpagina.html
+++ b/detailpagina.html
@@ -82,9 +82,9 @@
 			</ul>
 		</nav>
 
-
+		<!-- section 1 -->
 		<section>
-			<!-- section 1: product description -->
+			<!-- section 1-1: product description -->
 			<section>
 				<h1>Smiski Strap serie 1</h1>
 				<p>€ 6,50 (inclusief BTW)</p>
@@ -122,7 +122,7 @@
 				<p>Koop vandaag nog jouw Smiski Strap Serie 1!</p>
 			</section>
 
-			<!-- section 2: productviewer -->
+			<!-- section 1-2: productviewer -->
 			<!-- code van codepen opdracht -->
 			<section>
 				<h2 class="visually-hidden">productviewer</h2>
@@ -251,35 +251,37 @@
 	</main>
 
 	<footer>
-		<h2><img src="images/footer_logo.png" alt="Sonny Angels"></h2>
-		<p>Sonny Angel Benelux is de officiële webwinkel voor Sonny Angel in de Benelux, Duitsland en Oostenrijk. Ontdek
-			hier onze ruime collectie Sonny Angel, Smiski, Gee en Fancy Pets!</p>
+		<section>
+			<h2><img src="images/footer_logo.png" alt="Sonny Angels"></h2>
+			<p>Sonny Angel Benelux is de officiële webwinkel voor Sonny Angel in de Benelux, Duitsland en Oostenrijk. Ontdek
+				hier onze ruime collectie Sonny Angel, Smiski, Gee en Fancy Pets!</p>
+		</section>
 
 		<nav>
 			<h3>Over ons</h3>
 			<ul>
-				<li><a href="#">Over Sonny Angel</a></li>
-				<li><a href="#">Smiski</a></li>
-				<li><a href="#">Over Hippers</a></li>
-				<li><a href="#">Store Finder</a></li>
-				<li><a href="#">Algemene Voorwaarden</a></li>
-				<li><a href="#">Privacy</a></li>
+				<li><a href="">Over Sonny Angel</a></li>
+				<li><a href="">Smiski</a></li>
+				<li><a href="">Over Hippers</a></li>
+				<li><a href="">Store Finder</a></li>
+				<li><a href="">Algemene Voorwaarden</a></li>
+				<li><a href="">Privacy</a></li>
 			</ul>
 		</nav>
 
 		<nav>
 			<h3>Klantenservice</h3>
 			<ul>
-				<li><a href="#">FAQ's</a></li>
-				<li><a href="#">Mijn Account</a></li>
-				<li><a href="#">Contacteer Ons</a></li>
-				<li><a href="#">Betaling</a></li>
-				<li><a href="#">Levering</a></li>
-				<li><a href="#">Bestelstatus</a></li>
+				<li><a href="">FAQ's</a></li>
+				<li><a href="">Mijn Account</a></li>
+				<li><a href="">Contacteer Ons</a></li>
+				<li><a href="">Betaling</a></li>
+				<li><a href="">Levering</a></li>
+				<li><a href="">Bestelstatus</a></li>
 			</ul>
 		</nav>
 
-		<nav>
+		<section>
 			<a href="">
 				<svg width="30px" height="30px" viewBox="-5 0 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     
@@ -314,7 +316,7 @@
 
 			<p>Copyright © Sonny Angel Benelux 2024</p>
 			<img src="images/footer_payments.png" alt="">
-		</nav>
+		</section>
 	</footer>
 
 	<script defer src="scripts/script.js"></script>
